Stopped stretching images, centered image + text.

--- a/extension/contentScripts/mail/css/mail.less
+++ b/extension/contentScripts/mail/css/mail.less
@@ -574,7 +574,7 @@ padding: 0px 4px;
 /* ----------- IMAGES ---------------- */
 
 .image-box {
-width:250px;
+max-width:250px;
 padding: 0px;
 float: left;
 margin-left: 10px;
@@ -585,13 +585,15 @@ height: auto;
 padding: 10px;
 background-color: @white;
 font-size: 12px;
+text-align: center;
 }
 
 
 
 .mm-image {
-  width: 250px;
+  max-width: 250px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .mm-images-tab {
@@ -605,7 +607,7 @@ font-size: 12px;
 .image-filename {
   white-space: nowrap;
   text-overflow: ellipsis;
-  width: 250px;
+  max-width: 250px;
   overflow: hidden;
 }
 
